# zomantic

./: .env  .env.example  README.md  main.py  pyproject.toml  semantic_scholar.py  test_main.py  test_semantic_scholar.py  test_zotero.py  zotero.py
.github/workflows/: update_library.yml
tests/: test_main.py  test_semantic_scholar.py  test_zotero.py
tests/fixtures/: zotero_item.json
zomantic/: cli.py  main.py  semantic_scholar.py  zotero.py
